<resources>
    <string name="app_name">CipherKeep</string>
    <string name="entertainment">entertainment</string>
    <string name="work">work</string>
    <string name="study">study</string>
    <string name="life">life</string>
    <string name="other">other</string>

    <string name="web_name">Website Name</string>
    <string name="web_url">Website Url</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="category">Category</string>
    <string name="add">Add</string>

    <string name="login">Login</string>
    <string name="register">Register here</string>
    <string name="retrieve">Forgot your password? Retrieve it here</string>
</resources>