<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingTop="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/webNameDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_name"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/bronze"
        android:autofillHints=""
        android:textColor="@color/bronze"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/webUrlDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/web_url"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/urlInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        tools:ignore="LabelFor"
        android:autofillHints="" />

    <TextView
        android:id="@+id/webTypeDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/typeChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/category_work"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/work"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selected"
            android:onClick="selectCategory"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/category_life"
            android:layout_width="45dp"
            android:layout_height="30dp"
            android:text="@string/life"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selected"
            android:onClick="selectCategory"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/category_study"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/study"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selected"
            android:onClick="selectCategory"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/category_entertain"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/entertainment"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selected"
            android:onClick="selectCategory"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="5dp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/category_other"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/other"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:background="@drawable/button_selected"
            android:onClick="selectCategory"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


    <TextView
        android:id="@+id/usernameDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        android:autofillHints=""
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/passwordDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        tools:ignore="LabelFor,TextFields"
        android:autofillHints="" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:background="@drawable/button_outlook"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:onClick="add"/>

</LinearLayout>