<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        android:textColorHint="@color/bronze"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        android:textColorHint="@color/bronze"
        android:inputType="textPassword"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"

        android:background="@drawable/button_outlook"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@id/buttonLogin"
        android:layout_marginTop="24dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"/>

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"
        android:layout_below="@id/textViewRegister"
        android:layout_marginTop="8dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp"/>
</RelativeLayout>
