<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/registerID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        android:textColorHint="@color/bronze"
        android:layout_marginTop="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:backgroundTint="@color/bronze"
        android:textColor="@color/bronze"
        android:textColorHint="@color/bronze"
        android:inputType="textPassword"
        android:layout_below="@id/registerID"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/button_outlook"
        android:layout_below="@id/registerPassword"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"/>

</RelativeLayout>
