<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buttonContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagActivity"
    android:orientation="vertical"
    android:paddingTop="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp">

        <Button
            android:id="@+id/life"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/life"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_outlook"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/work"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/work"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_outlook"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >

        <Button
            android:id="@+id/study"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/study"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_outlook"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/other"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="20dp"
            android:text="@string/other"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_outlook"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp" >
        <Button
            android:id="@+id/entertain"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/entertainment"
            android:textSize="25sp"
            android:textAllCaps="false"
            android:background="@drawable/button_outlook"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/add"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:text=""
            android:background="@drawable/add_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="60dp"
            android:layout_marginEnd="30dp"
            android:onClick="toAddPage"/>
    </RelativeLayout>

</LinearLayout>
